Cambios en texto de acerca de mi

--- a/res/styles/components/_aboutMe.scss
+++ b/res/styles/components/_aboutMe.scss
@@ -16,6 +16,14 @@
         line-height: 40px;
         font-style: normal;
         margin-top: 1rem;
+        .sp-react{
+            color: #0693E3;
+            font-weight: 700;
+        }
+        .sp-angular{
+            color: #d32f2f;
+            font-weight: 700;
+        }
     }
     .typed-box{
         height: 12vh;
