nuevo boton agregado a las cartas

--- a/res/styles/components/_portfolio.scss
+++ b/res/styles/components/_portfolio.scss
@@ -54,6 +54,10 @@
       height: 8rem;
     }
     &__btn {
+      margin: 3px 0;
+      &__media {
+        background-color: $color-primary;
+      }
       background-color: $color-primary-darker;
       text-decoration: none;
       padding: 10px;
