--- a/res/styles/styles.css
+++ b/res/styles/styles.css
@@ -517,6 +517,19 @@
   height: 100vh;
 }
 
+.slide-element {
+  position: absolute;
+  color: #f5fffa;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
 .content {
   color: #aeb0b5;
   width: -webkit-max-content;
