--- a/res/styles/components/_mainContent.scss
+++ b/res/styles/components/_mainContent.scss
@@ -15,6 +15,8 @@
   text-align: center;
   font-size: 1.2rem;
   font-weight: 700;
+  opacity: 10;
+  transition: 1s ease all;
   p{
     margin: 2rem 0;
   }
@@ -52,6 +54,11 @@
   to {
     transform: translateY(-3px);
   }
+}
+
+.slide-fade{
+  opacity: 0;
+  transition: ease 1s all;
 }
 
 .content {
