--- a/res/styles/components/_mainContent.scss
+++ b/res/styles/components/_mainContent.scss
@@ -19,6 +19,7 @@
   transition: 1s ease all;
   p{
     margin: 2rem 0;
+    font-size: 1rem;
   }
   .arrowContainer{
     display: flex;
@@ -52,7 +53,7 @@
     transform: translateY(0);
   }
   to {
-    transform: translateY(-3px);
+    transform: translateY(-2px);
   }
 }
 
