--- a/res/styles/components/_navbarMobile.scss
+++ b/res/styles/components/_navbarMobile.scss
@@ -9,11 +9,11 @@
   margin-top: 10vh;
 }
 
-.navlinks {
+.mobile-menu {
   list-style: none;
   padding: 0;
   margin: 0;
-  width: 70%;
+  width: 60%;
   height: 100vh;
   background-color: $color-gray-dark;
   position: fixed;
@@ -21,19 +21,36 @@
   right: 0;
   margin-left: auto;
   display: none;
-  .nav-link {
-    text-align: center;
-    padding: 2rem 0 0;
-    &__link {
-      text-decoration: none;
-      font-weight: 800;
+  &__buttons {
+    height: 100vh;
+    margin: 5rem 1.3rem;
+  }
+  &__section-name {
+    font-size: 1rem;
+    font-weight: 700;
+    margin: 0.5rem 0;
+    color: $white;
+    opacity: 0.5;
+    text-transform: uppercase;
+  }
+  &__box {
+    position: relative;
+    padding: 1rem 0;
+    &__p {
       font-size: 1.2rem;
+      margin: 0;
+      font-weight: 600;
       color: $color-gray-light;
-      &:hover {
-        transition: 0.7s ease all;
-        cursor: pointer;
-        color: white;
-      }
+      text-decoration: none;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      width: 4px;
+      background-color: $color-primary;
+      top: 1px;
+      left: -13px;
+      height: 3.2rem;
     }
   }
 }
