--- a/res/styles/styles.css
+++ b/res/styles/styles.css
@@ -142,11 +142,11 @@
   margin-top: 10vh;
 }
 
-.navlinks {
+.mobile-menu {
   list-style: none;
   padding: 0;
   margin: 0;
-  width: 70%;
+  width: 60%;
   height: 100vh;
   background-color: #323a45;
   position: fixed;
@@ -156,23 +156,41 @@
   display: none;
 }
 
-.navlinks .nav-link {
-  text-align: center;
-  padding: 2rem 0 0;
+.mobile-menu__buttons {
+  height: 100vh;
+  margin: 5rem 1.3rem;
 }
 
-.navlinks .nav-link__link {
-  text-decoration: none;
-  font-weight: 800;
+.mobile-menu__section-name {
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 0.5rem 0;
+  color: #f5fffa;
+  opacity: 0.5;
+  text-transform: uppercase;
+}
+
+.mobile-menu__box {
+  position: relative;
+  padding: 1rem 0;
+}
+
+.mobile-menu__box__p {
   font-size: 1.2rem;
+  margin: 0;
+  font-weight: 600;
   color: #aeb0b5;
+  text-decoration: none;
 }
 
-.navlinks .nav-link__link:hover {
-  -webkit-transition: 0.7s ease all;
-  transition: 0.7s ease all;
-  cursor: pointer;
-  color: white;
+.mobile-menu__box::after {
+  content: "";
+  position: absolute;
+  width: 4px;
+  background-color: #105bd8;
+  top: 1px;
+  left: -13px;
+  height: 3.2rem;
 }
 
 #nav-mobile {
