nuevos archivos de modal

--- a/res/styles/styles.scss
+++ b/res/styles/styles.scss
@@ -16,6 +16,7 @@
 @import './components/mainContent';
 @import './components/aboutMe';
 @import './components/portfolio';
+@import './components/modal';
 
 //Global styles
 body{
