modal ahora es responsivo

--- a/res/styles/components/_modal.scss
+++ b/res/styles/components/_modal.scss
@@ -58,3 +58,43 @@
     }
   }
 }
+
+@media screen and (max-width: 991px){
+    .modal__content {
+        &__title {
+            font-size: 1.3rem;
+        }
+        &__desc {
+            font-size: 1rem;
+            line-height: 1.5rem;
+        }
+        &__video{
+            width: 80%;
+            height: auto;
+        }
+    }
+}
+
+@media screen and (max-width: 559px){
+    .modal__content {
+        padding: 3rem;
+        &__button {
+            font-size: 1rem;
+        }
+    }
+}
+
+@media screen and (max-width: 386px){
+    .modal__content {
+        padding: 2rem;
+        &__title {
+            margin-top: 3rem;
+        }
+        &__desc {
+            line-height: 1.3rem;
+        }
+        &__button {
+            font-size: 0.8rem;
+        }
+    }
+}
