--- a/res/styles/styles.css
+++ b/res/styles/styles.css
@@ -1200,6 +1200,44 @@
   height: 20rem;
 }
 
+@media screen and (max-width: 991px) {
+  .modal__content__title {
+    font-size: 1.3rem;
+  }
+  .modal__content__desc {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+  .modal__content__video {
+    width: 80%;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 559px) {
+  .modal__content {
+    padding: 3rem;
+  }
+  .modal__content__button {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 386px) {
+  .modal__content {
+    padding: 2rem;
+  }
+  .modal__content__title {
+    margin-top: 3rem;
+  }
+  .modal__content__desc {
+    line-height: 1.3rem;
+  }
+  .modal__content__button {
+    font-size: 0.8rem;
+  }
+}
+
 body {
   font-family: 'Rubik', sans-serif;
   background-color: #212121;
