--- a/res/styles/components/_modal.scss
+++ b/res/styles/components/_modal.scss
@@ -18,6 +18,7 @@
     border-radius: 5px;
     height: max-content;
     position: relative;
+    animation: modalFadeIn 1s ease;
     &__button {
       color: $color-base;
       background-color: $color-secondary;
@@ -57,6 +58,17 @@
       height: 20rem;
     }
   }
+}
+
+@keyframes modalFadeIn {
+    from {
+        opacity: 0;
+        top: -10px;
+    }
+    to {
+        opacity: 1;
+        top: 0;
+    }
 }
 
 @media screen and (max-width: 991px){
